--- a/EdgePicker/EdgePicker.vcxproj
+++ b/EdgePicker/EdgePicker.vcxproj
@@ -10,6 +10,13 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Utility.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Entrance.cpp" />
+    <ClCompile Include="Utility.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{449149E1-1B51-41FC-80CE-F8381EBEB690}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -77,8 +84,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
