--- a/EdgePicker/EdgePicker.vcxproj.filters
+++ b/EdgePicker/EdgePicker.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="EdgePicker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IOHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Utility.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EdgePicker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IOHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
