SegManager added and modified

--- a/EdgePicker/EdgePicker.vcxproj
+++ b/EdgePicker/EdgePicker.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="EdgePicker.h" />
     <ClInclude Include="ImageHelper.h" />
     <ClInclude Include="IOHelper.h" />
+    <ClInclude Include="SegmentManager.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
@@ -29,6 +30,7 @@
     <ClCompile Include="Entrance.cpp" />
     <ClCompile Include="ImageHelper.cpp" />
     <ClCompile Include="IOHelper.cpp" />
+    <ClCompile Include="SegmentManager.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
