--- a/EdgePicker/EdgePicker.vcxproj.filters
+++ b/EdgePicker/EdgePicker.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="IOHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SegmentManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Utility.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IOHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SegmentManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
